--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://rbassant:SRTpassword@srt621.068c7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://srtUser:SRTpassword@srt621.068c7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=3000
